--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Emerson Mendes</title>
 </head>
 <body>
     
+    <header>
+        <div class="interface">
+          <div class="logo">
+            <a href="a">
+                <img src="images/LOGO.jpg" alt="logo meu protfolio">
+            </a>       
+          </div><!--logo-->
+          <nav class="menu-desktop">
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Especialidades</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Projetos</a></li>
+            </ul>
+          </nav>
+
+            <div class="btn-contato">
+                    <a href="#">
+                        <button>Contato</button>
+                    </a>
+            </div><!--btn-contato-->
+        </div><!--interface-->
+    </header>
+
 </body>
 </html>
