alteraçao da imagem

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -12,7 +12,7 @@
         <div class="interface">
           <div class="logo">
             <a href="a">
-                <img src="images/LOGO.jpg" alt="logo meu protfolio">
+                <img src="images/Captura de tela de 2025-03-16 19-09-22.png" alt="logo meu protfolio">
             </a>       
           </div><!--logo-->
           <nav class="menu-desktop">
