Topo do site iniccio

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -16,12 +16,14 @@
 <body>
     
     <header>
+        <!-- INICIO LOGO -->
         <div class="interface">
           <div class="logo">
             <a href="a">
                 <img src="images/Captura de tela de 2025-03-16 19-09-22.png" alt="logo meu protfolio">
             </a>       
-          </div><!--logo-->
+          </div><!--FIM LOGO-->
+          <!-- INICIO INTERFACE -->
           <nav class="menu-desktop">
             <ul>
                 <li><a href="#">Início</a></li>
@@ -30,14 +32,38 @@
                 <li><a href="#">Projetos</a></li>
             </ul>
           </nav>
-
+            <!-- INICIO BTN CONTATO -->
             <div class="btn-contato">
                     <a href="#">
                         <button>Contato</button>
                     </a>
-            </div><!--btn-contato-->
+            </div><!--FIM btn-contato-->
         </div><!--interface-->
     </header>
+
+    <main>
+        <section class="topo-do-site">
+            <div class="interface">
+                <div class="flex">
+                    <div class="txt-topo-site">
+                        <h1>Olá Mundo, Sou Emerson Mendes<span>.</span> Desenvolvedor back end<span>.</span></h1>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum adipisci amet quos commodi minima placeat excepturi delectus quis nobis, veritatis dolorem voluptatum aspernatur error ad aliquid itaque sint facilis? Magni.</p>
+
+                        <div class="btn-contato">
+                            <a href="#">
+                                <button>Entre em Contato</button>
+                            </a>
+                        </div>   <!--btn-contato-->
+                    </div><!-- txt-topo-site -->
+
+                    <div class="img-topo-site">
+                        <img src="images/pessoa.jpeg" alt=" Foto do site">
+                        
+                    </div><!-- img-topo-site -->
+                </div><!--flex -->
+            </div>   <!-- inteface -->
+        </section>   <!-- Topo do site -->
+    </main>
 
 </body>
 </html>
