--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -7,9 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
-
     <!-- FIM GOOGLEE FONTS -->
+     <!--BOOTSTRAPE ICONS  -->
+     <link rel= "stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+
+     <!-- FIM BOOTSTRAPE ICONS  -->
     <link rel="stylesheet" href="style.css">
     <title>Emerson Mendes</title>
 </head>
@@ -20,14 +23,14 @@
         <div class="interface">
           <div class="logo">
             <a href="a">
-                <img src="images/Captura de tela de 2025-03-16 19-09-22.png" alt="logo meu protfolio">
+                <img src="images/Captura de tela de 2025-03-21 11-58-47.png" alt="logo meu protfolio">
             </a>       
           </div><!--FIM LOGO-->
           <!-- INICIO INTERFACE -->
           <nav class="menu-desktop">
             <ul>
                 <li><a href="#">Início</a></li>
-                <li><a href="#">Especialidades</a></li>
+                <li><a href="#">Habilidades</a></li>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Projetos</a></li>
             </ul>
@@ -63,6 +66,32 @@
                 </div><!--flex -->
             </div>   <!-- inteface -->
         </section>   <!-- Topo do site -->
+
+        <section class="habilidades">
+            <div class="interface">
+                <h2 class="titulo">MINHAS <span>HABILIDADES.</span></h2>
+                <div class="flex">
+                    <Div class="habilidades-box">
+                        <i class="bi bi-filetype-html"></i>
+                    </Div>  <!-- habilidades-box -->  
+                    <Div class="habilidades-box">
+                        <i class="bi bi-filetype-js"></i>
+                    </Div>  <!-- habilidades-box -->  
+                    <Div class="habilidades-box">
+                        <i class="bi bi-filetype-css"></i>
+                    </Div>  <!-- habilidades-box -->  
+                    <Div class="habilidades-box">
+                        <i class="bi bi-filetype-php"></i>
+                    </Div>  <!-- habilidades-box -->  
+                    <Div class="habilidades-box">
+                        <i class="bi bi-github"></i>
+                    </Div>  <!-- habilidades-box -->  
+                    <Div class="minhas-habilidades">
+                                    
+                        </Div><!-- minhas-habilidades -->
+                </div><!-- flex -->
+            </div><!-- interface -->
+        </section><!-- Habilidades -->
     </main>
 
 </body>
